Update Java-things.md